--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,9 @@ jobs:
     name: Linux
     runs-on: ubuntu-latest
 
+    env:
+      SRC_DIR: src/github.com/$GITHUB_REPOSITORY
+
     strategy:
       matrix:
         go: [ '1.14.x', '1.15.x' ]
@@ -33,7 +36,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          path: src/github.com/essentialkaos/aligo
+          path: ${{env.SRC_DIR}}
 
       - name: Install deps
         run: |
@@ -41,9 +44,9 @@ jobs:
           curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
 
       - name: Download dependencies
+        working-directory: ${{env.SRC_DIR}}
         run: make deps
-        working-directory: src/github.com/essentialkaos/aligo
 
       - name: Run tests
+        working-directory: ${{env.SRC_DIR}}
         run: make all
-        working-directory: src/github.com/essentialkaos/aligo
