--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      SRC_DIR: src/github.com/${{env.GITHUB_REPOSITORY}}
+      SRC_DIR: src/github.com/essentialkaos/aligo
 
     strategy:
       matrix:
