--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      SRC_DIR: src/github.com/essentialkaos/aligo
+      SRC_DIR: $(echo "src/github.com/$GITHUB_REPOSITORY")
 
     strategy:
       matrix:
