--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,8 +58,29 @@ jobs:
     needs: Go
 
     steps:
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: '1.15.x'
+        id: go
+
+      - name: Setup PATH
+        run: |
+          echo "GOPATH=${{ github.workspace }}" >> "$GITHUB_ENV"
+          echo "GOBIN=${{ github.workspace }}/bin" >> "$GITHUB_ENV"
+          echo "${{ github.workspace }}/bin" >> "$GITHUB_PATH"
+
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Install deps
+        run: |
+          mkdir -p $GOBIN
+          curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+
+      - name: Download dependencies
+        working-directory: ${{env.SRC_DIR}}
+        run: make deps
 
       - name: Install Aligo
         run: |
