Add Aligo workflow step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,4 +98,5 @@ jobs:
         run: ./aligo --version
 
       - name: Check Go structs alignment info
+        working-directory: ${{env.SRC_DIR}}
         run: ./aligo check ./...
