--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
 
     env:
       SRC_DIR: src/github.com/${{ github.repository }}
+      GO111MODULE: auto
 
     strategy:
       matrix:
@@ -59,12 +60,13 @@ jobs:
 
     env:
       SRC_DIR: src/github.com/${{ github.repository }}
+      GO111MODULE: auto
 
     steps:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: '1.15.x'
+          go-version: '1.16.x'
         id: go
 
       - name: Setup PATH
