--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,4 +82,5 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Check spelling
+        continue-on-error: true
         uses: crate-ci/typos@master
