--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,7 @@ jobs:
         uses: essentialkaos/aligo-action@v2
         with:
           files: ./...
+          version: latest
 
   Typos:
     name: Typos
